@@ -41,12 +41,12 @@
     --></div>
     
     <div class="__template__" type="PROJECTROW"><!--
-        <tr projectId="(#=obj.id#)" class="projectEditRow" >
+        <tr taskId="(#=obj.id#)" class="projectEditRow" >
         <th class="gdfCell" align="right"><span class="taskRowIndex">(#=obj.getRow()+1#)</span></th>
         <td class="gdfCell" align="right"><span>(#=obj.id#)</span></td>
         <td class="gdfCell indentCell" style="font-weight: bold">(#=obj.link()#)</td>
-        <td class="gdfCell"><input type="text" name="start"  value="" class="date"></td>
-        <td class="gdfCell"><input type="text" name="end" value="" class="date"></td>
+        <td class="gdfCell"><div class="date start"></div></td>
+        <td class="gdfCell"><div class="date end"></div></td>
         <td class="gdfCell"></td>
         <td class="gdfCell"></td>
         <td class="gdfCell taskAssigs"></td>
@@ -58,9 +58,9 @@
         <th class="gdfCell" align="right"><span class="taskRowIndex">(#=obj.getRow()+1#)</span></th>
         <td class="gdfCell" align="right" style="background-color: (#=obj.progress >= 100 ? 'rgb(153, 255, 51)' : 'red'#)"><span>(#=obj.id#)</span></td>
         <td class="gdfCell indentCell" style="padding-left:(#=obj.getParents().length*10#)px; (#=obj.getChildren().length>0?'font-weight: bold':''#)">(#=obj.link()#)</td>
-        <td class="gdfCell"><input type="text" name="start"  value="" class="date"></td>
-        <td class="gdfCell"><input type="text" name="end" value="" class="date"></td>
-        <td class="gdfCell"><input type="text" name="timing" value="(#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)"></td>
+        <td class="gdfCell"><div class="date start"></div></td>
+        <td class="gdfCell"><div class="date end"></div></td>
+        <td class="gdfCell"><div class="timing">(#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)</div></td>
         <td class="gdfCell">(#=obj.getDependsLinks()#)</td>
         <td class="gdfCell">(#=obj.getResourcesLinks()#)</td>
         </tr>
@@ -71,9 +71,9 @@
         <th class="gdfCell" align="right"><span class="taskRowIndex">(#=obj.getRow()+1#)</span></th>
         <td class="gdfCell" align="right" style="background-color: (#=obj.progress >= 100 ? 'rgb(153, 255, 51)' : 'red'#)"><span>(#=obj.id#)</span></td>
         <td class="gdfCell indentCell" style="padding-left:(#=obj.getParents().length*10#)px; (#=obj.getChildren().length>0?'font-weight: bold':''#)">(#=obj.link()#)</td>
-        <td class="gdfCell"><input type="text" name="start"  value="" class="date"></td>
-        <td class="gdfCell"><input type="text" name="end" value="" class="date"></td>
-        <td class="gdfCell"><input type="text" name="timing" value="(#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)"></td>
+        <td class="gdfCell"><div class="date start"></div></td>
+        <td class="gdfCell"><div class="date end"></div></td>
+        <td class="gdfCell"><div name="timing">(#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)</div></td>
         <td class="gdfCell">(#=obj.getDependsLinks()#)</td>
         <td class="gdfCell">(#=obj.getResourcesLinks()#)</td>
         </tr>
